remove unecessary dependency on PApplet instance method loadBytes